# Aegis

./: .gitattributes  .gitignore  README.md  build.sh  pyproject.toml  requirements.txt
agent/: native.py
docs/: CAST_REPORT.md  GAP_ANALYSIS.md  GROUP_MEETING.md  ISOLATION_LEVELS.md  PAPER_DRAFT.md  PROOFS.md  REPORT.md  VITABENCH_INTEGRATION.md  architecture.md  file_map.md  final.md  quickstart.md  代码结构.md  实现实验.md  实验&实现.docx
outputs/: atcc_editable_paper_figures_20260713.pptx  atcc_editable_paper_figures_20260713.pptx.inspect.ndjson  atcc_joint_policy_paper_figures_editable_20260713.pptx  atcc_joint_policy_paper_figures_editable_20260713.pptx.inspect.ndjson  atcc_publication_figures_editable_20260713.pptx  atcc_publication_figures_editable_20260713.pptx.inspect.ndjson  ~$atcc_joint_policy_paper_figures_editable_20260713.pptx
results/: atcc_20260709.csv  paper_main_joint_policy_20260713.progress.csv  paper_main_joint_policy_20260713.unified_raw.csv  paper_main_joint_policy_20260713.unified_summary.csv
scripts/: analyze_paper_atcc_gate.py  atcc_ablation.ps1  check_dbx1000_hybrid.ps1  check_dbx1000_hybrid.sh  combine_budgeted_atcc_results.py  compare_cc.ps1  filter_paper_trajectory.py  finalize_paper_main_results.py  mixed_benchmark.ps1  mixed_matrix.ps1  reproduce_ccfa.ps1  reproduce_ccfa.sh  reproduce_dbx1000_vita.ps1  reproduce_dbx1000_vita.sh  reproduce_dbx1000_vita_cgen_sensitivity.sh  reproduce_dbx1000_vita_matrix.ps1  reproduce_dbx1000_vita_matrix.sh  reproduce_dbx1000_vita_sensitivity.ps1  reproduce_dbx1000_vita_sensitivity.sh  reproduce_dbx1000_vita_stress.ps1  reproduce_dbx1000_vita_stress.sh  reproduce_llm_matrix.ps1  reproduce_llm_matrix.sh  reproduce_llm_semantic_closed_loop.ps1  reproduce_llm_semantic_closed_loop.sh  reproduce_rigorous.ps1  reproduce_rigorous.sh  reproduce_semantic_workloads.ps1  reproduce_semantic_workloads.sh  reproduce_vitabench.ps1  reproduce_vitabench.sh  run_atcc_ablation.ps1  run_benchmark.ps1  run_budgeted_atcc_experiment.py  run_tpcc_compare.ps1  run_ycsb_compare.ps1  smoke.ps1  smoke.sh  summarize_cc_metrics.py  summarize_paper_matrix.py  (+8 more)
tests/: __init__.py  test_agent_path_experiment.py  test_atcc_ablation_experiment.py  test_atcc_family_policy.py  test_atcc_manifest_runner.py  test_atcc_policy_training.py  test_atcc_profile_runner.py  test_atcc_retry_experiment.py  test_atcc_reward_cost_search.py  test_atcc_ycsb_strict_tuned.py  test_benchmark_cli.py  (+17 more)
(+232 files in other folders)
