[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cast-das"
version = "0.1.0"
description = "Agent-side transaction runtime with pluggable concurrency control over a versioned KV backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pybind11>=2.10",
]
authors = [
  {name = "CAST-DAS contributors"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
cast-das-smoke = "agent.cli.smoke:main"
cast-das-compare = "agent.cli.compare:main"
cast-das-mixed = "agent.cli.mixed:main"
cast-das-matrix = "agent.cli.matrix:main"
cast-das-atcc-ablation = "agent.cli.atcc_ablation:main"
cast-das-train-atcc = "agent.cli.train_atcc:main"

[tool.setuptools.packages.find]
include = ["agent*"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ["tests"]
